<resources>
    <string name="app_name">YaraTube</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigationProfile">پروفایل</string>
    <string name="navigationAboutUs">درباره ما</string>
    <string name="avigationContractUs">تماس با ما</string>
    <string name="navigation_heder_user_name">نام کاربر</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TextViewOther">پربازدیدترین ها</string>
    <string name="productImage">تصویر محصول</string>
    <string name="TitlecardViewPayer">عنوان</string>
    <string name="DescriptionCardViewTitle">توضیحات</string>
    <string name="CommentButton">نظر دهید</string>
    <string name="CommentUserText">نظرات کاربران</string>
    <string name="DescriptionProductDetail">توضیحات</string>
    <string name="UserCommentProductDetail">نظرات کاربران</string>
    <string name="dialog_phone_number_title">ورود</string>
    <string name="enter_your_phone_number">از طریق شماره موبایل</string>
    <string name="send">از طریق حساب google</string>
    <string name="Vorood_mobile">ورود از طریق شماره موبایل</string>
    <string name="EnterYourPhoneNumber">شماره موبایل خود را وارد کنید</string>
    <string name="button_submit">ثبت</string>
    <string name="text_view_enter_verification">کد فعال سازی را وارد کنید</string>
    <string name="edit_text_enter_verification">کد فعالسازی</string>
    <string name="text_view_not_recieve">کد را دریافت نکردید؟</string>
    <string name="button_edit_number">تصحیح شماره</string>

    <string name="Comment">نظر</string>
    <string name="submit">ثبت</string>
    <string name="comment_response">نظر شما پس از بررسی ثبت خواهد شد</string>
    <string name="success_sign_in">ورود شما با موفقیت انجام شد</string>
    <string name="invalid_code">کد نامعتبر است</string>


    <string name="action_ok">OK</string>
    <string name="action_send_normal_sms">Send normal SMS</string>
    <string name="action_send_condition_sms">Send Condition SMS</string>

    <string name="your_cellphone_number">Your cellphone number:</string>
    <string name="phone_number_hint">912345678</string>
    <string name="toast_sending_sms">Sending sms…</string>

    <string name="permission_alert_dialog_title">Requesting SMS permission</string>
    <string name="permission_dialog_message">The app will now request your permission to send and read SMS related services.</string>

    <string name="error_invalid_phone_number">Invalid phone number</string>


    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="success_login_google">ورود شما با موفقیت انجام شد!!</string>
    <string name="navigation_more">بیشتر</string>
    <string name="text_more_profile">پروفایل</string>
    <string name="text_more_about_us">درباره ما</string>
    <string name="text_more_contact_us">تماس با ما</string>

    <string name="name">نام نمایشی</string>
    <string name="gender">جنسیت</string>
    <string name="birthday">تاریخ تولد</string>
    <string name="save">ثبت تغییرات</string>
    <string name="cancel">انصراف</string>
    <string name="back">back</string>

    <string name="galery">گالری</string>
    <string name="login">ورود</string>
    <string name="login_by_phone_number">از طریق شماره موبایل</string>
    <string name="login_by_google">از طریق حساب google</string>
    <string name="details">توضیحات</string>
    <string name="comments">نظرات کاربران</string>
    <string name="comment">نظر</string>

    <string name="send_comment">نظر دهید</string>
    <string name="full_name_user_profile">نام و نام خانوادگی</string>
    <string name="google_account_method">از طریق حساب GOOGLE</string>
    <string name="camera">دوربین</string>
    <string name="gallery">گالری</string>

    <string name="text_myemail">Hyousefi412@gmail.com</string>
    <string name="link_github">https://github.com/HUsefi</string>
    <string name="text_about_me">Hello Dear ...This app is developed by Hossein Yousefi.</string>
</resources>
