<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_enter_verification"
        android:id="@+id/text_view_enter_verification"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:padding="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_enter_verification"
        android:hint="@string/edit_text_enter_verification"
        android:textSize="20dp"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_not_recieve"
        android:textSize="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_number"
            android:textSize="20dp"
            android:layout_weight="1"
            android:id="@+id/button_edit_code"
            android:textColor="#4b92df"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4b92df"
            android:text="@string/button_submit"
            android:textSize="20dp"
            android:layout_weight="1"
            android:id="@+id/button_submit_code"
            />


    </LinearLayout>




</LinearLayout>