<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:clickable="true"
    android:elevation="3dp"
    android:focusable="true"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/padding_8dp"
    tools:context=".ui.login.verification.VerificationFragment">


    <TextView
        android:id="@+id/text_view_enter_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:paddingEnd="0dp"
        android:text="@string/text_view_enter_verification"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_enter_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_phone_dialog"
        android:hint="@string/edit_text_enter_verification"
        android:inputType="phone"
        android:padding="20dp"
        android:textSize="@dimen/font_size_18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/text_view_not_recieve"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_edit_code"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_button_profile"
            android:maxLines="1"
            android:text="@string/button_edit_number"
            android:textColor="@color/button_background_1"
            android:gravity="center"
            android:textSize="16dp" />

        <Button
            android:id="@+id/button_submit_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/submit_button"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/button_submit"
            android:layout_margin="5dp"
            android:textColor="@color/White"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>