<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:elevation="3dp"
    tools:context=".ui.login.loginphone.LoginPhoneFragment">

    <TextView
        android:id="@+id/text_view_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/Vorood_mobile"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_margin="20dp"
        android:hint="@string/EnterYourPhoneNumber"
        android:padding="10dp"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#4b92df"
        android:padding="10dp"
        android:text="@string/button_submit"
        android:textColor="@color/White"
        android:textSize="20dp" />


</LinearLayout>