<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/padding_8dp"
    android:elevation="3dp"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="16dp"
    tools:context=".ui.login.loginselect.SelectLoginMethodFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_phone_number_title"
        android:textSize="@dimen/font_size_18sp"
        android:layout_margin="8dp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="phone"
        android:text="@string/enter_your_phone_number"
        android:drawableEnd="@drawable/smartphone__1_"/>

    <Button
        android:id="@+id/google_method_butt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_method"
        android:textColor="@color/White"
        android:background="@drawable/shape"
        android:layout_margin="8dp"
        android:paddingStart="8dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_method"
        android:textColor="@color/White"
        android:background="@drawable/shape"
        android:layout_margin="8dp"
        android:paddingStart="8dp" />

    <LinearLayout
        android:id="@+id/sign_out_and_disconnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect" />
    </LinearLayout>






</LinearLayout>