<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/more_fragment_container"
    tools:context=".ui.dashbord.more.MoreMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_more_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="@string/text_more_profile"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#dfdddd">

        </View>

        <TextView
            android:id="@+id/text_more_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="@string/text_more_about_us"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#dfdddd">

        </View>

        <TextView
            android:id="@+id/text_more_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:text="@string/text_more_contact_us"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#dfdddd">

        </View>


    </LinearLayout>




</FrameLayout>

